--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>G3 Architects</title>
+  <!-- style.css linked: Design control is achieved by 
+   adding external CSS files to the header -->
   <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body>  
+  <!-- G3 Architects Header Section: A clean and responsive
+   design with logo, navigation, and banner -->
   <header>
     <div class="container">
-
       <div class="wrapper">
         <div class="logo">G3 Architects</div>
+        <!-- Navigation Bar: Contains links to different sections
+         of the website, including Home, About, Contact Us, and Login -->
         <nav>
             <ul class="nav-links">
               <li><a href="#">Home</a></li>
@@ -24,7 +29,8 @@
             </div>
         </nav>
       </div>
-
+      <!-- Banner Section: Features a prominent title, description,
+       and a call-to-action button, along with an image -->
       <div class="banner">
         <div class="banner-text">
           <h1>Brand New Group of Architects</h1>
@@ -39,9 +45,9 @@
           <img src="./images/banner.png" alt="Group of Architects">
         </div>
       </div>
-
     </div>
   </header>
+  <!-- Main Content Section: Contains features, facts, and sponsors -->
   <main>
     <section>
       <div class="container">
@@ -65,6 +71,7 @@
         </div>
       </div>
     </section>
+    <!-- Features Section: Provides a feature-rich description of the website's features -->
     <section>
       <div class="container">
         <div class="feature-section">
@@ -102,7 +109,8 @@
         </div>
       </div>
     </section>
-
+    <!-- Testimonials Section: Provides testimonials from
+      clients about the website's features -->
     <section>
       <div class="container">
         <div class="facts-section">
@@ -113,7 +121,6 @@
               but the majority have suffered alteration.
             </p>
           </div>
-
           <div class="facts-grid">
             <div class="fact-box">
               <img src="./images/icons/ribon.png" alt="Medal Icon">
@@ -139,6 +146,7 @@
         </div>
       </div>
     </section>
+    <!-- Sponsors Section: Displays logos of sponsors -->
     <section>
       <div class="container">
         <div class="sponsors">
@@ -160,6 +168,7 @@
       </div>
     </section>
   </main>
+  <!-- Footer Section: Contains copyright information -->
   <footer>
     <div class="container">
       <div class="site-footer">
